more spacing fixes

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -113,6 +113,7 @@ html, body {
     font-size: 32px;
     font-family: 'Source Sans Pro';
     font-weight: 700;
+    left: -20px
 }
 
 .flex-container {
